; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto.c_dev_key_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_crypto.c_dev_key_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211vap = type { i32 (%struct.ieee80211vap*, %struct.ieee80211_key*, i32*, i32*)* }
%struct.ieee80211_key = type opaque
%struct.ieee80211_key.0 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee80211vap*, %struct.ieee80211_key.0*, i32*, i32*)* @dev_key_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dev_key_alloc(%struct.ieee80211vap* %0, %struct.ieee80211_key.0* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.ieee80211vap*, align 8
  %6 = alloca %struct.ieee80211_key.0*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store %struct.ieee80211vap* %0, %struct.ieee80211vap** %5, align 8
  store %struct.ieee80211_key.0* %1, %struct.ieee80211_key.0** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load %struct.ieee80211vap*, %struct.ieee80211vap** %5, align 8
  %10 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %9, i32 0, i32 0
  %11 = load i32 (%struct.ieee80211vap*, %struct.ieee80211_key*, i32*, i32*)*, i32 (%struct.ieee80211vap*, %struct.ieee80211_key*, i32*, i32*)** %10, align 8
  %12 = load %struct.ieee80211vap*, %struct.ieee80211vap** %5, align 8
  %13 = load %struct.ieee80211_key.0*, %struct.ieee80211_key.0** %6, align 8
  %14 = bitcast %struct.ieee80211_key.0* %13 to %struct.ieee80211_key*
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 %11(%struct.ieee80211vap* %12, %struct.ieee80211_key* %14, i32* %15, i32* %16)
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
